Kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netflix
  namespace: netflix
  labels:
    app: netflix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netflix
  template:
    metadata:
      labels:
        app: netflix
    spec:
      containers:
        - name: netflix
          image: sohila11/netflix-clone:main-3b722f3

          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
