Kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: netflix-service
  namespace: netflix
spec:
  selector:
    app: netflix
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
